@@ -1,3 +1,8 @@
+2016-09-23  Kugan Vivekanandarajah  <kuganv@linaro.org>
+
+	PR ipa/77677
+	* gcc.dg/torture/pr77677.c: New test.
+
 2016-09-23  Andre Vehreschild  <vehre@gcc.gnu.org>
 
 	* gfortran.dg/coarray_lib_comm_1.f90: Using the old caf-interface
